--- a/taskfiles/npm/Taskfile.yml
+++ b/taskfiles/npm/Taskfile.yml
@@ -2,6 +2,7 @@
 version: '3'
 
 vars:
+  BINARY_BUILD_FOLDER: dist/bin
   BUILD_FOLDERS: build coverage dist
 
 tasks:
@@ -19,8 +20,9 @@ tasks:
   build:compile:
     deps:
       - build:nest
-      # - build:esbuild:bundled
-      # - build:esbuild:minified
+      - build:esbuild:bundled
+      - build:esbuild:minified
+      - build:fpm
 
   build:nest:
     deps:
@@ -55,6 +57,88 @@ tasks:
       - :install:npm:esbuild
     cmds:
       - node .common/esbuild.minified.js
+
+  build:fpm:
+    deps:
+      - :install:software:jq
+    vars:
+      NPM_PACKAGE_NAME:
+        sh: jq -r '.blueprint.bin_name' package.json
+      NPM_PACKAGE_VERSION:
+        sh: jq -r '.version' package.json
+    cmds:
+      - task: build:fpm-build
+        vars:
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+
+  build:fpm:build:
+    deps:
+      - task: build:fpm:compile
+        vars:
+          ARCHITECTURE: amd64
+          FILE_EXTENSION: deb
+          FPM_TARGET: deb
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+          SYSTEM: debian
+      - task: build:fpm:compile
+        vars:
+          ARCHITECTURE: arm64
+          FILE_EXTENSION: deb
+          FPM_TARGET: deb
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+          SYSTEM: debian
+      - task: build:fpm:compile
+        vars:
+          ARCHITECTURE: amd64
+          FILE_EXTENSION: txz
+          FPM_TARGET: freebsd
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+          SYSTEM: freebsd
+      # - task: build:fpm:compile
+      #   vars:
+      #     ARCHITECTURE: amd64
+      #     FILE_EXTENSION:
+      #     FPM_TARGET: pacman
+      #     NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+      #     NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+      #     SYSTEM: archlinux
+      - task: build:fpm:compile
+        vars:
+          ARCHITECTURE: amd64
+          FILE_EXTENSION: rpm
+          FPM_TARGET: rpm
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+          SYSTEM: redhat
+      - task: build:fpm:compile
+        vars:
+          ARCHITECTURE: arm64
+          FILE_EXTENSION: rpm
+          FPM_TARGET: rpm
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+          SYSTEM: redhat
+      - task: build:fpm:compile
+        vars:
+          ARCHITECTURE: all
+          FILE_EXTENSION: tar
+          FPM_TARGET: tar
+          NPM_PACKAGE_NAME: '{{.NPM_PACKAGE_NAME}}'
+          NPM_PACKAGE_VERSION: '{{.NPM_PACKAGE_VERSION}}'
+          SYSTEM: source
+    cmds:
+      - gzip -9 {{.NPM_PACKAGE_NAME}}-{{.NPM_PACKAGE_VERSION}}-source-all.tar
+
+  build:fpm:compile:
+    deps:
+      - :install:software:fpm
+    cmds:
+      - fpm -s npm -t {{.FPM_TARGET}}
+        -p {{.BINARY_BUILD_FOLDER}}/{{.NPM_PACKAGE_NAME}}-{{.NPM_PACKAGE_VERSION}}-{{.SYSTEM}}-{{.ARCHITECTURE}}.{{.FILE_EXTENSION}}
+        --architecture {{.ARCHITECTURE}} .
 
   clean:
     deps:
