--- a/taskfiles/common/Taskfile-code.yml
+++ b/taskfiles/common/Taskfile-code.yml
@@ -4,11 +4,16 @@ version: '3'
 tasks:
   count:
     deps:
-      - :install:software:jq
       - :install:software:tokei
     desc: Display a chart detailing the lines of code for each language used
-    env:
-      SRC_PATHS:
-        sh: jq -r '.src_paths' package.json | sed 's/^null$/./'
     cmds:
-      - tokei "$SRC_PATHS"
+      - tokei . --exclude .common .modules
+
+  find:todo:
+    deps:
+      - :install:npm:leasot
+    vars:
+      LEASOT_IGNORE: .common .modules .venv node_modules venv
+    desc: Scan code base for TODOs and FIXMEs
+    cmds:
+      - leasot --ignore {{.LEASOT_IGNORE}} {{.CLI_ARGS}}
