--- a/package.json
+++ b/package.json
@@ -1,22 +1,133 @@
 {
-  "name": "shared",
+  "name": "@megabytelabs/shared-common-files",
   "version": "1.0.0",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "description": "Common files used across Megabyte Labs repositories",
-  "license": "ISC",
-  "author": "",
-  "homepage": "https://gitlab.com/megabyte-labs/common/shared#readme",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@gitlab.com/megabyte-labs/common/shared.git"
+    "url": "git+https://gitlab.com/megabyte-labs/common/shared.git"
   },
+  "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
+  "homepage": "https://gitlab.com/megabyte-labs/common/shared#readme",
   "bugs": {
-    "url": "https://gitlab.com/megabyte-labs/common/shared/issues"
+    "email": "help@megabyte.space",
+    "url": "https://gitlab.com/megabyte-labs/common/shared/-/issues"
   },
-  "main": "index.js",
+  "main": "dist/main.js",
+  "type": "module",
+  "engines": {
+    "node": ">=10"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "fix": "",
+    "lint": "",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier .",
+    "lint:shellcheck": "shellcheck",
+    "lint:yamllint": "yamllint .",
+    "test": "cd ../eslint && npm run test && cd ../shared && npm install --save-dev @megabytelabs/eslint-config && eslint ."
+  },
+  "dependencies": {
+    "esbuild": "^0.12.29",
+    "esbuild-node-externals": "^1.3.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@megabytelabs/prettier-config": "^14.14.14"
+    "@commitlint/config-conventional": "^13.1.0",
+    "@megabytelabs/eslint-config": "^1.0.61",
+    "@megabytelabs/prettier-config": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.3.0",
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "blueprint": {
+    "description": "Includes common files used across Megabyte Labs repositories",
+    "overview": "All of the Megabyte Labs repositories share configuration files and sometimes even application files. When this repository is updated, the changes are propagated down to an application-type-specific shared repository which is then used to update all of the repositories by making a single change to this repository. The changes are propagated through GitLab CI.",
+    "name": "Shared",
+    "repository": {
+      "github": "https://github.com/ProfessorManhattan/shared-common-files",
+      "gitlab": "https://gitlab.com/megabyte-labs/common/shared"
+    },
+    "slug": "shared-common-files",
+    "title": "Shared Common Files"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "eslintConfig": {
+    "extends": "@megabytelabs/eslint-config"
+  },
+  "funding": [
+    {
+      "type": "opencollective",
+      "url": "https://opencollective.com/megabytelabs"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/ProfessorManhattan"
+    }
+  ],
+  "lint-staged": {
+    "**/*": [
+      "blocklint --wordlist blacklist,slave,whitelist",
+      "check-merge-conflict",
+      "check-added-large-files",
+      "check-symlinks",
+      "destroyed-symlinks"
+    ],
+    "**/*.(css|html|less|md|mjml|php|scss|sh|xml)": [
+      "task fix:prettier --"
+    ],
+    "**/*.(jpg|png)": [
+      "task image:compress --"
+    ],
+    "**/*.(js|jsx|ts)": [
+      "task fix:js --",
+      "task lint:js --"
+    ],
+    "**/*.json": [
+      "task fix:json --"
+    ],
+    "**/*.py": [
+      "black",
+      "flake8"
+    ],
+    "**/*.sh": [
+      "task fix:shell --",
+      "task lint:shell --"
+    ],
+    "**/*.toml": [
+      "task lint:toml --"
+    ],
+    "**/*.xml": [
+      "task fix:xml --",
+      "task lint:xml --"
+    ],
+    "**/*.yml": [
+      "task fix:yaml --",
+      "task lint:yaml --"
+    ],
+    "**/*vault.yml": [
+      "task ansible:vault:lint:file --"
+    ],
+    "logo.png": [
+      "task image:resize -- 200 200",
+      "task image:compress --"
+    ],
+    "requirements.txt": [
+      "requirements-txt-fixer"
+    ]
+  },
+  "prettier": "@megabytelabs/prettier-config",
+  "standard-version": {
+    "scripts": {
+      "prerelease": "git add --all"
+    }
   }
 }
