--- a/taskfiles/common/Taskfile.yml
+++ b/taskfiles/common/Taskfile.yml
@@ -231,7 +231,7 @@ tasks:
       - cmd: . .venv/bin/activate
         ignore_error: true
     status:
-      - true
+      - 'true'
     preconditions:
       - sh: test -f .venv/bin/activate
         msg: '`.venv/bin/activate` is missing!'
