--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "private": false,
   "name": "@megabytelabs/shared-common-files",
   "version": "1.0.0",
-  "description": "Common files used across Megabyte Labs repositories",
+  "description": "Includes common files used across different types of common file repositories (e.g. Go, Python, etc.)",
   "license": "MIT",
   "author": "Brian Zalewski <brian@megabyte.space> (https://megabyte.space)",
-  "homepage": "https://gitlab.com/megabyte-labs/common/shared#readme",
+  "homepage": "https://megabyte.space",
   "repository": {
     "type": "git",
     "url": "git+https://gitlab.com/megabyte-labs/common/shared.git"
@@ -15,12 +15,11 @@
     "url": "https://gitlab.com/megabyte-labs/common/shared/-/issues"
   },
   "type": "module",
-  "main": "dist/main.js",
   "scripts": {
-    "fix": "",
-    "lint": "",
-    "lint:eslint": "eslint .",
-    "test": "cd ../eslint && npm run test && cd ../shared && npm install --save-dev @megabytelabs/eslint-config && eslint ."
+    "fix": "task fix",
+    "help": "task --list",
+    "lint": "task lint",
+    "start": "bash .start.sh"
   },
   "config": {
     "commitizen": {
@@ -46,8 +45,8 @@
     "access": "public"
   },
   "blueprint": {
-    "description": "Includes common files used across Megabyte Labs repositories",
-    "overview": "All of the Megabyte Labs repositories share configuration files and sometimes even application files. When this repository is updated, the changes are propagated down to an application-type-specific shared repository which is then used to update all of the repositories by making a single change to this repository. The changes are propagated through GitLab CI.",
+    "description": "Includes common files used across different types of common file repositories (e.g. Go, Python, etc.)",
+    "overview": "This repository feeds downstream repositories that store programming language specific common files. When this repository is updated, the changes are propagated downstream via CI. This repository contains files that are meant to be global. For instance, if Go projects and Angular projects share a common file (say `.editorconfig`, for example) then that file is stored in this repository and propagated to the Go and Angular common file repositories. Then, for example, the Go common file repository is included in all of the Go projects as a submodule. This is meant to be done with every repository in an eco-system so that meta files, documentation, etc. are all kept in sync.",
     "name": "Shared",
     "repository": {
       "github": "https://github.com/ProfessorManhattan/shared-common-files",
