Update common/.config/esbuild.bundled.js, common/.config/esbuild.minified.js, common/LICENSE.handlebars, common/Taskfile.yml.handlebars, common/package.json.handlebars, common/.config/start.sh.handlebars, common/CODE_OF_CONDUCT.md, Taskfile.yml, common/pyproject.toml.handlebars, common/poetry.lock, package.json Deleted package.json.handlebars, requirements.txt

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,3 +4,8 @@ version: '3'
 vars:
   REPOSITORY_SUBTYPE: shared
   REPOSITORY_TYPE: common
+
+tasks:
+  update:
+    cmds:
+      - cp -rf common .
