Update common/.config/taskfiles/upstream/Taskfile-common.yml, common/.config/taskfiles/upstream/Taskfile-project.yml, common/.config/taskfiles/upstream/Taskfile.yml, common/.config/taskfiles/Taskfile-fix.yml

--- a/common/.config/taskfiles/Taskfile-fix.yml
+++ b/common/.config/taskfiles/Taskfile-fix.yml
@@ -16,7 +16,7 @@ tasks:
       DOCKER_CONTAINER:
         sh: echo $container
     cmds:
-      - esprint{{if eq .DOCKER_CONTAINER "container"}} check{{end}} --fix
+      - esprint{{if eq .DOCKER_CONTAINER "docker"}} check{{end}} --fix
 
   js:
     deps:
