--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -14,12 +14,13 @@ tasks:
 
   clone:common:
     cmds:
+      - rm -rf {{.SHARED_FOLDER}}
       - git clone {{.SHARED_COMMON_URL}} {{.SHARED_FOLDER}}
 
   clone:docs:
     cmds:
       - rm -rf common/.config/docs
-      - git clone {{.DOCS_URL}} .shared/common/.config/docs
+      - git clone {{.DOCS_URL}} {{.SHARED_FOLDER}}/common/.config/docs
       - rm -rf common/.config/docs/.git
 
   copy:
