--- a/common/.config/taskfiles/upstream/Taskfile-project.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-project.yml
@@ -2,7 +2,7 @@
 version: '3'
 
 vars:
-  SHARED_COMMON_URL: https://gitlab.com/megabyte-labs/common/{{.REPOSITORY_TYPE}}.git
+  PROJECT_COMMON_URL: https://gitlab.com/megabyte-labs/common/{{.REPOSITORY_TYPE}}.git
   SHARED_FOLDER: .shared
 
 tasks:
