--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -15,13 +15,15 @@ tasks:
   clone:common:
     cmds:
       - rm -rf {{.SHARED_FOLDER}}
-      - git clone {{.SHARED_COMMON_URL}} {{.SHARED_FOLDER}}
+      - git clone --depth=1 {{.SHARED_COMMON_URL}} {{.SHARED_FOLDER}}
+      - rm -rf {{.SHARED_FOLDER}}/.git
 
   clone:docs:
     cmds:
       - rm -rf common/.config/docs
-      - git clone {{.DOCS_URL}} {{.SHARED_FOLDER}}/common/.config/docs
-      - rm -rf common/.config/docs/.git
+      - mkdir -p {{.SHARED_FOLDER}}/common/.config
+      - git clone --depth=1 {{.DOCS_URL}} {{.SHARED_FOLDER}}/common/.config/docs
+      - rm -rf {{.SHARED_FOLDER}}/common/.config/docs/.git
 
   copy:
     deps:
