--- a/common/.config/taskfiles/upstream/Taskfile-common.yml
+++ b/common/.config/taskfiles/upstream/Taskfile-common.yml
@@ -113,6 +113,7 @@ tasks:
     deps:
       - :install:npm:hbs
     cmds:
-      - find . -type f -path ./common -prune -name '*.handlebars' | while read FILE; do
+      - |
+        find . -type f -path ./common -prune -name '*.handlebars' | while read FILE; do
           hbs --data variables.json --helper @budibase/handlebars-helpers "$FILE" --stdout > "${FILE%.*}"
         done
