--- a/common/.gitlab-ci.yml
+++ b/common/.gitlab-ci.yml
@@ -5,9 +5,9 @@ stages:
   - deploy
 
 include:
-  - .gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml
-  - .gitlab/ci/lint/prettier.gitlab-ci.yml
-  - .gitlab/ci/lint/shellcheck.gitlab-ci.yml
-  - .gitlab/ci/yamllint.gitlab-ci.yml
-  - .gitlab/ci/propagate/propagate-groups.gitlab-ci.yml
-  - .gitlab/ci/update/update-common.gitlab-ci.yml
+  - local: .gitlab/ci/lint/gitlab-ci-lint.gitlab-ci.yml
+  - local: .gitlab/ci/lint/prettier.gitlab-ci.yml
+  - local: .gitlab/ci/lint/shellcheck.gitlab-ci.yml
+  - local: .gitlab/ci/yamllint.gitlab-ci.yml
+  - local: .gitlab/ci/propagate/propagate-groups.gitlab-ci.yml
+  - local: .gitlab/ci/update/update-common.gitlab-ci.yml
