--- a/common/Taskfile.hbs.yml
+++ b/common/Taskfile.hbs.yml
@@ -8,8 +8,8 @@ vars:
   GITHUB_USER: ProfessorManhattan
   NPM_PROGRAM: npm
   NPX_PACKAGE: npx
-  REPOSITORY_SUBTYPE: {{subgroup}}
-  REPOSITORY_TYPE: {{group}}
+  REPOSITORY_SUBTYPE: '{{subgroup}}'
+  REPOSITORY_TYPE: '{{group}}'
   TIMEZONE: America/New_York
 
 includes:
@@ -55,4 +55,4 @@ tasks:
       **Example usage:**
       `task start`
     cmds:
-      - task: common:update:update
+      - task: '{{#eq group "common"}}upstream:common{{else}}common:update:update{{/eq}}
