--- a/common/pyproject.hbs.toml
+++ b/common/pyproject.hbs.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "{{repository.prefix.github}}{{slug}}"
-version = "0.1.0"
+version = "{{version}}"
 description = "{{description}}"
 authors = ["{{author.name}} <{{author.email}}>"]
 license = "{{license}}"
@@ -11,12 +11,27 @@ keywords = ["node", "python", "app"]
 include = ["CHANGELOG.md"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
 
 [tool.poetry.dev-dependencies]
+python = "^3.9"
+{{#eq group 'ansible'}}
+ansible = "^4.8.0"
+ansible-lint = "<5.0.0"
+ansibler = "^0.1.14"
+black = "^21.10b0"
+{{/eq}}
 blocklint = "^0.2.3"
+{{#eq group 'ansible'}}
+flake8 = "^4.0.1"
+molecule-docker = "^1.1.0"
+molecule-vagrant = "^0.6.3"
+{{/eq}}
 pre-commit-hooks = "^4.0.1"
 proselint = "^0.12.0"
+{{#eq group 'ansible'}}
+python-vagrant = "^0.5.15"
+pywinrm = ">=0.3.0"
+{{/eq}}
 yamllint = "^1.26.3"
 
 [tool.poetry.urls]
