--- a/common/.config/taskfiles/publish/Taskfile-android.yml
+++ b/common/.config/taskfiles/publish/Taskfile-android.yml
@@ -2,10 +2,19 @@
 version: '3'
 
 tasks:
-  beta:
-    deps:
-      - :install:software:fastlane
-    desc: Publishes Android app to Firebase beta channel
+  # beta:
+  #   deps:
+  #     - :install:software:fastlane
+  #   desc: Publishes Android app to Firebase beta channel
+  #   cmds: 
+  #     - fastlane add_plugin firebase_app_distribution
+  #     - fastlane run firebase_app_distribution_login
+  #     - fastlane beta
 
   release:
+    deps:
+        - :install:software:fastlane
     desc: Publishes Android app to Google Play
+    cmds: 
+      - fastlane add_plugin ionic
+      - fastlane deploy
