--- a/common/.config/taskfiles/publish/Taskfile-android.yml
+++ b/common/.config/taskfiles/publish/Taskfile-android.yml
@@ -2,14 +2,14 @@
 version: '3'
 
 tasks:
-  # beta:
-  #   deps:
-  #     - :install:software:fastlane
-  #   desc: Publishes Android app to Firebase beta channel
-  #   cmds: 
-  #     - fastlane add_plugin firebase_app_distribution
-  #     - fastlane run firebase_app_distribution_login
-  #     - fastlane beta
+  beta:
+    deps:
+      - :install:software:fastlane
+    desc: Publishes Android app to Firebase beta channel
+    cmds: 
+      - fastlane add_plugin firebase_app_distribution
+      - fastlane run firebase_app_distribution_login
+      - fastlane beta
 
   release:
     deps:
