--- a/common/pyproject.hbs.toml
+++ b/common/pyproject.hbs.toml
@@ -11,30 +11,11 @@ keywords = ["node", "python", "app"]
 include = ["CHANGELOG.md"]
 
 [tool.poetry.dependencies]
-{{#eq group 'ansible'}}
-python = "^3.9"
-ansible = "^4.8.0"
-docker = "^5.0.3"
-pywinrm = ">=0.3.0"
-python-vagrant = "^0.5.15"
-{{/if}}
 
 [tool.poetry.dev-dependencies]
-{{#eq group 'ansible'}}{{else}}
 python = "^3.9"
-{{/eq}}
-{{#eq group 'ansible'}}
-ansible-lint = "<5.0.0"
-ansibler = "^0.1.14"
-black = "^21.10b0"
-{{/eq}}
 blocklint = "^0.2.3"
-{{#eq group 'ansible'}}
 flake8 = "^4.0.1"
-mod-ansible-autodoc = "^0.5.7"
-molecule-docker = "^1.1.0"
-molecule-vagrant = "^0.6.3"
-{{/eq}}
 {{#eq group 'packer'}}
 latestos = "^0.5"
 {{/eq}}
@@ -44,7 +25,12 @@ yamllint = "^1.26.3"
 
 [tool.poetry.urls]
 "Bug Tracker" = "{{repository.gitlab}}{{repository.location.issues.gitlab}}"
+"GitHub" = "{{profile_link.github}}/{{profile.github}}"
+"GitLab" = "https://gitlab.com/megabyte-labs"
 "Megabyte Labs" = "{{link.home}}"
+"Open Collective" = "{{profile_link.opencollective}}/{{profile.opencollective}}"
+"Patreon" = "{{profile_link.patreon}}/{{profile.patreon}}"
+"PyPi" = "{{profile_link.pypi}}/{{profile.pypi}}"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
